# pokedex

./: Cargo.toml  Dockerfile  Production.md  README.md
kubernetes/: README.md  deployment.yaml  namespace.yaml  service.yaml
src/: api.rs  error.rs  funtranslations.rs  main.rs  model.rs  pokeapi.rs
src/backend/: funtranslations.rs  mod.rs  pokeapi.rs
